fix wrap word in box

--- a/app/assets/stylesheets/components/_messages.scss
+++ b/app/assets/stylesheets/components/_messages.scss
@@ -56,6 +56,7 @@
         margin: auto;
         color: #2b2b2b;
         display: table;
+        word-break: break-word;
       }
       .timestamp{
         font-size: 11px;
